fixed menu image width and sub menu spacing

--- a/frontend/resources/sass/mixins/_mixins.scss
+++ b/frontend/resources/sass/mixins/_mixins.scss
@@ -37,7 +37,7 @@
 				font-size: 0.875rem;
 
 				img {
-					width: 25px;
+					width: 20px;
 					padding: 0;
 				}
 			}
@@ -321,6 +321,7 @@
 			border-radius: 0;
 			column-gap: 2rem;
 			box-shadow: 0 4px 2px -2px rgb(0 0 0 / 0.1);
+			margin-top: 2px;
 
 			li {
 				justify-content: space-between;
